# bible-quotation-database

./: .editorconfig  .gitignore  README.md  export_csv.py  export_json.py  pyproject.toml  quotations.db  quotations.json  quotations_range.csv  quotations_range.json  quotations_single.csv  run_all.py
export_db/: export_csv.py  export_json.py  export_web_json.py
initialise_db/: create_db.py  schema.sql
populate_db/: db_utils.py  ref_utils.py  source_bible_researcher.py  source_kalvesmaki.py
web/: browse.html  browse.js  index.html  quotations.json  style.css
