[project]
name = "bible-quotation-database"
version = "0.1.0"
description = "A database of places where the Bible quotes itself, especially the New Testament quoting the Old Testament."
requires-python = ">=3.10"
dependencies = [
    "bibleverseparser",
    "beautifulsoup4",
    "lxml",
    "requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
